--- a/virtualDjango/helloworld/templates/home.html
+++ b/virtualDjango/helloworld/templates/home.html
@@ -1,6 +1,11 @@
 <body> 
 <h1> Hello world! </h1>
 
+<form method='POST' action=''>{% csrf_token %} 
+	{{ form.as_p }}
+	<input type = 'submit' name='button1' value = 'save' />
+</form>
+
 {{ all_object }}
 
 </body>
